test/sema/return-no-value-in-non-void-function.delta
// RUN: %check_errors %not %delta -typecheck %s

int foo() {
    // CHECK: [[@LINE+1]]:5: error: expected return statement to return a value of type 'int'
    return;
}
